--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
 /* Base */
 @import url(./styles/reset.css);
+@import url(./styles/base.css);
 @import url(./styles/fonts.css);
+@import url(./styles/variables.css);
+
+/* Blocks */
+@import url(./styles/blocs/header.css);
